--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,82 @@
 body{
-    background-color: rgb(37, 236, 47);
+    background-color: rgb(30, 30, 30);
+
+    color: #ffffff;
+    caret-color: #ffffff; 
+
+    font-family: sans-serif;
+    margin: 8%;
 }
+
 
 .navigation_main{
     display: flex;
     justify-content: space-evenly;
+}
+
+li{
+
+    list-style-type: none;
+    
+}
+    
+
+a{
+
+    background-color: rgb(85, 85, 85);
+    padding: 1em 1.5em;
+    position: relative;
+    font-family: sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 7px;
+}
+
+    
+a:link, a:visited {
+    
+    color:#ffffff;
+    caret-color: #ffffff;
+    
+    text-decoration:none
+    
+}
+    
+a:hover, button:hover {
+    
+    color:#a3a3a3;
+    background-color:#3a3a3a;
+    text-decoration: none;
+    top: 5px;
+
+}
+
+a:active, button:active {
+
+    background-color:#797979;
+
+}
+
+input{
+    background-color: rgb(255, 255, 255);
+    padding: 0.5em 1em;
+    position: relative;
+    font-family: sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 7px;
+    border: 0;
+    margin: 1%;
+}
+button{
+    color:#ffffff;
+    background-color: rgb(85, 85, 85);
+    padding: 0.5em 1em;
+    position: relative;
+    font-family: sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 7px;
+    border: 0;
+    margin: 1%;
 }
